--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-chime-sdk-meetings": "^3.901.0",
     "@prisma/client": "^6.16.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "amazon-chime-sdk-js": "^3.29.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.16.3",
