--- a/package.json
+++ b/package.json
@@ -10,26 +10,39 @@
   },
   "dependencies": {
     "@aws-sdk/client-chime-sdk-meetings": "^3.901.0",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
+    "@tanstack/react-query": "^5.90.2",
     "@types/jsonwebtoken": "^9.0.10",
     "amazon-chime-sdk-js": "^3.29.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.64.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
